[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.12"
hello_utils = { path = "hello_utils", version = "0.1.0" }

[target.'cfg(unix)'.build-dependencies]
cc = "1.0.3"
